# ollama-mcp-client

./: .gitignore  README.md  client.py  pyproject.toml  pyrightconfig.json  re.txt  setup.py
examples/: ollama_example.py  server.json
httpserver/: server.py
server/: blender_server.py  server.py
src/: run_server.py
src/abstract/: base_client.py  config_container.py  server_config.py
src/clients/: api.py  ollama_client.py  sd_client.py  shapE_client.py
src/website/: app.py  index.html
src/website/static/css/: style.css
src/website/static/js/: script.js
