[project]
name = "ollama-mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.9.0",
    "fastmcp>=0.4.1",
    "mcp>=1.1.2",
    "ollama>=0.4.4",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[tool.ruff]
line-length = 150

[tool.ruff.format]
# quote-style = 'single'
# indent-style = 'tab'
docstring-code-format = true
line-ending = 'lf'
