[project]
name = "ollama-mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorlog>=6.9.0",
    "fastapi>=0.115.12",
    "fastmcp>=0.4.1",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "hypercorn>=0.17.3",
    "mcp>=1.6.0",
    "ollama>=0.4.7",
]

[tool.ruff]
line-length = 150

[tool.ruff.format]
# quote-style = 'single'
# indent-style = 'tab'
docstring-code-format = true
line-ending = 'lf'

[dependency-groups]
dev = ["uvicorn[standard]>=0.34.0"]
